# Video-CT_MAE

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
config/finetuning/: config.yaml
config/finetuning/data/: default.yaml
config/finetuning/lr_scheduler/: cosine.yaml
config/finetuning/model/: default.yaml
config/finetuning/optimizer/: adam.yaml
config/pretraining/: config.yaml
src/: __init__.py  video_ct_transform.py
src/finetuning/: data.py  model.py  train.py
src/finetuning/utils/: model_utils.py  train_utils.py  transforms.py
src/pretraining/: data.py  engine_pretrain.py  main_pretrain.py  models_mae.py
src/pretraining/util/: logging.py  misc.py  video_vit.py  visualize_model_pred.py
